--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@angular/animations": "~9.0.5",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
-    "@angular/core": "~9.0.5",
+    "@angular/core": "^9.0.7",
     "@angular/forms": "~9.0.5",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
-    "rxjs": "~6.5.4",
+    "@ngrx/store": "^9.2.0",
+    "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
